prodIngress/openshift/envoy-ingress.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
  labels:
    name: envoy-config
data:
  config: |-
    static_resources:
      listeners:
      - name: listener_0
        address:
          socket_address: { address: 0.0.0.0, port_value: 10000 }
        filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            config:
              stat_prefix: ingress_http
              codec_type: AUTO
              route_config:
                name: local_route
                virtual_hosts:

                #### Add your webb domain here
                - name: jfox
                  domains: ["google-com.svc.cluster.local","google-com.svc"]
                  routes:
                  - match: { prefix: "/" }
                    route:
                      cluster: google
                      host_rewrite: "google.com"
                - name: pbkwidget
                  domains: ["example-com.via-int.svc.cluster.local","example-com.via-int.svc"]
                  routes:
                  - match: { prefix: "/" }
                    route:
                      cluster: example
                      host_rewrite: "example.com"
              http_filters:
              - name: envoy.router
          tls_context:
            common_tls_context:
              tls_certificates:
                - certificate_chain:
                    filename: "/etc/ssl/tls.crt"
                  private_key:
                    filename: "/etc/ssl/tls.key"
              tls_params:
                tls_minimum_protocol_version: TLSv1_2
              validation_context:
                trusted_ca:
                  filename: "/etc/ssl/ca.pem"
            require_client_certificate: true
      ########################
      # SQL Lissners
      #
      ########################
      - name: mysql
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 3401
        filter_chains:
        - filters:
          - name: envoy.tcp_proxy
            config:
              stat_prefix: ingress_tcp
              cluster: mysql
          tls_context:
            common_tls_context:
              tls_certificates:
                - certificate_chain:
                    filename: "/etc/ssl/tls.crt"
                  private_key:
                    filename: "/etc/ssl/tls.key"
              tls_params:
                tls_minimum_protocol_version: TLSv1_2
              validation_context:
                trusted_ca:
                  filename: "/etc/ssl/ca.pem"
            require_client_certificate: true
    
    
      clusters:
      ########################
      ###
      ###  Proxy all connections webb conenctions
      ###
      #########################
      - name: google
        connect_timeout: 0.25s
        type: LOGICAL_DNS
        # Comment out the following line to test on v6 networks
        dns_lookup_family: V4_ONLY
        lb_policy: ROUND_ROBIN
        hosts: [{ socket_address: { address: google.com, port_value: 443 }}]
        tls_context: { sni: google.com }
      
      - name: example
        connect_timeout: 0.25s
        type: LOGICAL_DNS
        # Comment out the following line to test on v6 networks
        dns_lookup_family: V4_ONLY
        lb_policy: ROUND_ROBIN
        hosts: [{ socket_address: { address: example.com, port_value: 443 }}]
        tls_context: { sni: example.com }
      
        #####################
        # SQL CONFIG
        #
        ##################
      - name: mysql
        connect_timeout: 3.25s
        type: strict_dns
        lb_policy: round_robin
        hosts:
        - socket_address:
            address: 127.0.0.1
            port_value: 3306
